--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,7 @@ project(Esame_Laboratorio)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_subdirectory(Test)
-set(SOURCE_FILES ShoppingList.cpp ShoppingList.h Observer.h Subject.h Item.h Item.cpp)
+set(SOURCE_FILES ShoppingList.cpp ShoppingList.h Observer.h Subject.h Item.h Item.cpp User.h User.cpp)
 
 add_executable(Esame_Laboratorio main.cpp)
 
